<resources>

    <string name="app_name">BarbieCorn Pizza</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="account">Do not have an account? </string>
    <string name="chooseCity">Choose City</string>
    <string name="go">Go</string>
    <string name="location">location...</string>
    <string name="currentLocation">current location</string>
    <string name="changeLang">Change Language</string>
    <string name="confirmLocation">Confirm Location</string>
    <string name="selectAddressManually">Select Address Manually</string>
    <string name="myOrders">My Orders</string>
    <string name="sendOTP">send OTP</string>
    <string name="or">OR</string>
    <string name="loginWithEmail">Login with Email</string>
    <string name="registerNow">Register Now</string>
    <string name="resendIn">Resend In </string>
    <string name="resendOtp">Resend OTP</string>
    <string name="exploreMenu">Explore\nMenu</string>
    <string name="verify">Verify</string>
    <string name="nonVegPizza">Non - Veg Pizza</string>
    <string name="vegPizza">Veg Pizza</string>
    <string name="burgers">Burgers</string>
    <string name="pasta">Pasta</string>
    <string name="frenchFries">French Fries</string>
    <string name="sideOrders">Side Orders</string>
    <string name="deserts">Deserts</string>
    <string name="beverages">Beverages</string>
    <string name="currentOffers">Current Offers</string>
    <string name="exploreNow">Explore Now</string>
    <string name="updateProfile">Update\nProfile</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="myfav">My Favourites</string>
    <string name="myAddresses">My Addresses</string>
    <string name="myLanguage">My Language</string>
    <string name="logOut">Log Out</string>
    <string name="needHelp">Need Help?</string>
    <string name="confirmToLogOut">Are you sure, you want to LogOut?</string>
    <string name="myCart">My Cart</string>
    <string name="myCartDescription">My Cart Des...</string>
    <string name="selectAnAddress">Select an Address</string>
    <string name="chooseAnAddress">Choose an Address</string>
    <string name="goForCheckout">Go for Checkout</string>
    <string name="orderConfirm">Order Confirmation</string>
    <string name="orderWillBePlaced">Order Will Be Placed On</string>
    <string name="totalItems">Total Items : </string>
    <string name="itemDetails">Item Details</string>
    <string name="paymentMenthod">Payment Method</string>
    <string name="orderType">Order Type</string>
    <string name="total">Total</string>
    <string name="proceedToPay">Proceed To Pay</string>
    <string name="placeOrder">Place Order</string>
    <string name="cashOnDelivery">Cash on Delivery</string>
    <string name="payViaUPI">Pay via UPI</string>
    <string name="dineIn">Dine In</string>
    <string name="deliver">Deliver</string>
    <string name="about">About</string>
    <string name="us">Us</string>
    <string name="ourApps">-: Our Apps :-</string>
    <string name="myMenu">My Menu</string>
    <string name="sizeChart">Size Chart</string>
    <string name="regular">Regular</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="serveOne">Serves 1</string>
    <string name="serveTwo">Serves 2</string>
    <string name="serveFour">Serves 4</string>
    <string name="addExtraCheese">Add extra cheese</string>
    <string name="toppingChart">Topping Chart</string>
    <string name="item"> / item</string>
    <string name="vegTopping">Veg\nTopping</string>
    <string name="nonVegTopping">Non - Veg\nTopping</string>
    <string name="totalCost">Total Cost</string>
    <string name="addToCart">Add To Cart</string>
    <string name="viewCart">View Cart</string>
    <string name="shopIsClosed">Shop is Closed...</string>
    <string name="sorry">Sorry!!!</string>
    <string name="PleaseContactOwnerForDetails">Please contact to shop owner for more details...</string>
    <string name="selectAShop">-: Select a Shop :-</string>
    <string name="pizzaSize">Pizza Size : </string>
    <string name="pizzaOne">Pizza 1</string>
    <string name="pizzaTwo">Pizza 2</string>
    <string name="selectYourFirstPizza">Select your first pizza...</string>
    <string name="selectYourSecondPizza">Select your second pizza...</string>
    <string name="exclusiveOffers">Exclusive Offers</string>
    <string name="havingTrouble">Having Trouble?\nContact Us!!!</string>
    <string name="dropMessage">Drop a Message</string>
    <string name="trackOrder">Track Order</string>
    <string name="cooking">Cooking</string>
    <string name="confirmed">Confirmed</string>
    <string name="onTheWay">On The Way</string>
    <string name="delivered">Delivered</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="myOrderDes">My Orders Des...</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="cancelledConfirmed">Cacelled/Confirmed</string>
    <string name="choicesOfCrusts">Choices of Crusts</string>
    <string name="cheeseBurst">Cheese Burst</string>
    <string name="thinCrust">Thin Crust</string>
</resources>