<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/log_out_relative_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/log_out_card"
        android:translationZ="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/creative_red"
                android:padding="10dp">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_sign_out"
                    app:tint="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logOut"
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:fontFamily="serif"/>
            </RelativeLayout>
                <TextView
                    android:id="@+id/log_out_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:translationZ="5dp"
                    android:hint="@string/confirmToLogOut"
                    android:paddingTop="8dp"
                    android:textSize="14sp"
                    android:fontFamily="serif"
                    android:textColor="@color/smoky_black"
                    android:paddingBottom="8dp"
                    android:layout_marginBottom="40dp"
                    android:paddingLeft="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:paddingRight="15dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/confirm_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/log_out_card"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/confirm"
        android:fontFamily="serif"
        android:textColor="@color/white"
        android:background="@drawable/text_background"
        android:backgroundTint="@color/creative_red"
        android:translationZ="7dp"
        android:translationY="15dp"/>
    <TextView
        android:id="@+id/cancel_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/log_out_card"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:text="@string/cancel"
        android:fontFamily="serif"
        android:textColor="@color/white"
        android:background="@drawable/text_background"
        android:backgroundTint="@color/smoky_black"
        android:translationZ="7dp"
        android:translationY="15dp"/>

</RelativeLayout>