<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <ImageView
        android:id="@+id/setup_activity_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_create_account"
        android:layout_marginTop="10dp"/>
    <ProgressBar
        android:id="@+id/setup_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:visibility="gone"
        android:indeterminateTint="@color/creative_yellow_dark"
        android:translationX="-30dp"/>

    <LinearLayout
        android:layout_below="@+id/setup_activity_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <EditText
            android:id="@+id/setup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/smoky_black"
            android:fontFamily="serif"
            android:hint="@string/email"
            android:drawableLeft="@drawable/ic_outline_email"
            android:drawableTint="@color/creative_red"
            android:drawablePadding="10dp"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:inputType="textEmailAddress"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/login_text_background" />
        <EditText
            android:id="@+id/setup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/smoky_black"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_outline_vpn_key"
            android:drawableTint="@color/creative_red"
            android:drawablePadding="10dp"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/login_text_background" />
        <EditText
            android:id="@+id/setup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/smoky_black"
            android:fontFamily="serif"
            android:hint="@string/confirmPassword"
            android:drawableLeft="@drawable/ic_outline_vpn_key"
            android:drawableTint="@color/creative_red"
            android:drawablePadding="10dp"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/login_text_background" />
        <TextView
            android:id="@+id/setup_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country_code_layout"
            android:text="@string/registerNow"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@drawable/text_background"
            android:backgroundTint="@color/creative_red"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            android:fontFamily="serif"
            android:translationZ="5dp"
            android:textColor="@color/white"
            android:paddingBottom="10dp"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"/>
    </LinearLayout>

</RelativeLayout>