<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PhoneVerificationActivity">

    <TextView
        android:id="@+id/phone_verification_header"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:text="L\nO\nG\nI\nN"
        android:fontFamily="serif"
        android:gravity="bottom|center_horizontal"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:translationY="-20dp"
        android:paddingBottom="15dp"
        android:textStyle="bold"
        android:translationZ="5dp"
        android:textColor="@color/white"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/text_background"
        android:backgroundTint="@color/creative_yellow_dark"/>

    <RelativeLayout
        android:layout_below="@+id/phone_verification_header"
        android:layout_width="match_parent"
        android:layout_above="@+id/phone_verification_footer"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/country_code_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/phone_verify_country_code"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/text_background"
                    app:ccp_arrowColor="@color/white"
                    app:ccp_contentColor="@color/white"
                    android:paddingLeft="10dp"
                    app:ccp_textSize="14sp"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:backgroundTint="@color/smoky_black"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/phone_verify_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/smoky_black"
                    android:fontFamily="serif"
                    android:hint="00000 00000"
                    android:textSize="14sp"
                    android:paddingLeft="30dp"
                    android:inputType="phone"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/login_text_background" />
            </LinearLayout>

            <TextView
                android:id="@+id/send_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country_code_layout"
                android:text="@string/sendOTP"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/text_background"
                android:backgroundTint="@color/creative_red"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:paddingTop="10dp"
                android:fontFamily="serif"
                android:translationZ="5dp"
                android:textColor="@color/white"
                android:paddingBottom="10dp"
                android:paddingRight="40dp"
                android:paddingLeft="40dp"/>

            <RelativeLayout
                android:id="@+id/login_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/send_otp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@color/creative_yellow_dark" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/creative_yellow_dark"
                    android:fontFamily="serif"
                    android:layout_centerHorizontal="true"
                    android:background="@color/white"
                    android:padding="10dp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_below="@+id/login_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/smoky_black"
                    android:fontFamily="serif"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_outline_email"
                    android:drawableTint="@color/creative_red"
                    android:drawablePadding="10dp"
                    android:textSize="14sp"
                    android:paddingLeft="10dp"
                    android:inputType="textEmailAddress"
                    android:paddingRight="10dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/login_text_background" />
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/smoky_black"
                    android:fontFamily="serif"
                    android:hint="@string/password"
                    android:drawableLeft="@drawable/ic_outline_vpn_key"
                    android:drawableTint="@color/creative_red"
                    android:drawablePadding="10dp"
                    android:textSize="14sp"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword"
                    android:paddingRight="10dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/login_text_background" />
                <TextView
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/country_code_layout"
                    android:text="@string/loginWithEmail"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:background="@drawable/text_background"
                    android:backgroundTint="@color/creative_red"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:paddingTop="10dp"
                    android:fontFamily="serif"
                    android:translationZ="5dp"
                    android:textColor="@color/white"
                    android:paddingBottom="10dp"
                    android:paddingRight="40dp"
                    android:paddingLeft="40dp"/>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/phone_verification_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:fontFamily="serif"/>
        <TextView
            android:id="@+id/phone_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerNow"
            android:textColor="@color/creative_red"
            android:fontFamily="serif"/>
    </LinearLayout>

</RelativeLayout>