<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/change_language_relative_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/change_language_card"
        android:translationZ="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/creative_red"
                android:padding="10dp">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_language"
                    app:tint="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changeLang"
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:fontFamily="serif"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/choose_language_hindi_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:layout_toLeftOf="@+id/choose_language_vertical_bar"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/choose_language_hindi"
                        android:layout_height="match_parent"
                        android:text="अ"
                        android:textSize="36dp"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:textColor="@color/title_background"
                        android:layout_width="match_parent"/>

                </androidx.cardview.widget.CardView>
                <View
                    android:id="@+id/choose_language_vertical_bar"
                    android:layout_centerHorizontal="true"
                    android:layout_width="2dp"
                    android:background="@color/white"
                    android:visibility="invisible"
                    android:layout_height="10dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/choose_language_english_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:layout_toRightOf="@+id/choose_language_vertical_bar"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/choose_language_english"
                        android:layout_height="match_parent"
                        android:text="A"
                        android:textSize="36dp"
                        android:fontFamily="serif"
                        android:textColor="@color/title_background"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_width="match_parent"/>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/confirm_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/change_language_card"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/confirm"
        android:fontFamily="serif"
        android:textColor="@color/white"
        android:background="@drawable/text_background"
        android:backgroundTint="@color/creative_red"
        android:translationZ="7dp"
        android:translationY="15dp"/>
    <TextView
        android:id="@+id/cancel_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/change_language_card"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:text="@string/cancel"
        android:fontFamily="serif"
        android:textColor="@color/white"
        android:background="@drawable/text_background"
        android:backgroundTint="@color/smoky_black"
        android:translationZ="7dp"
        android:translationY="15dp"/>

</RelativeLayout>